--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -7,18 +7,12 @@
 			<h1><a href="#">Django Girls Tutorial</a></h1>
 		</div>
 
-		<div>
-			<p>published: date</p>
-			<h2><a href="#">Post Title</a></h2>
-			<p>Blog content</p>
-		</div>
-
-
-		<div>
-			<p>published: date</p>
-			<h2><a href="#">Post Title</a></h2>
-			<p>Blog content</p>
-		</div>
-
+		{% for post in posts %}
+			<div>
+				<p>published: {{ post.published_date }}</p>
+				<h2><a href="#">{{ post.title}}</a></h2>
+				<p>{{ post.text|linebreaks }}</p>
+			</div>
+		{% endfor %}
 	</body>
 </html>
