--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -10,7 +10,11 @@
 	</head>
 	<body>
 		<div class="page-header">
+			{% if user.is_authenticated %}
+				<a id="add-new" class="btn btn-info" href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus">Add New Post</span></a>
+			{% endif %}
 			<h1><a href="#">Django Girls Tutorial</a></h1>
+
 		</div>
 
 		<div class="content container">
