--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -1,7 +1,8 @@
 .page-header {
     background-color: #9933ff;
-    margin-top: 0;
-    padding: 20px 20px 20px 40px;
+    margin:0;
+    padding: 20px 20px 10px 40px;
+    border-bottom:none;
 }
 
 .page-header h1, .page-header h1 a, .page-header h1 a:visited, .page-header h1 a:active {
@@ -12,6 +13,13 @@
 
 .content {
     margin-left: 40px;
+}
+
+.toolbar{
+	background-color: #6600cc;
+	padding:1em 3em;
+	margin:0 0 20px 0;
+	width:100%;
 }
 
 h1, h2, h3, h4 {
