--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -10,12 +10,18 @@
 	</head>
 	<body>
 		<div class="page-header">
-			{% if user.is_authenticated %}
-				<a id="add-new" class="btn btn-info" href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus">Add New Post</span></a>
-			{% endif %}
 			<h1><a href="#">Django Girls Tutorial</a></h1>
-
 		</div>
+
+		{% if user.is_authenticated %}
+		<div class="toolbar container">
+			<div class="row">
+				<a class="btn btn-default" href="{% url 'post_draft_list' %}" ><span class="glyphicon glyphicon-edit"></span> View Drafts</a>
+
+				<a id="add-new" class="btn btn-info" href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span> Add New Post</a>
+			</div>
+		</div>
+		{% endif %}
 
 		<div class="content container">
 		    <div class="row">
