--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -3,12 +3,16 @@
 {% block content %}
 	<div class="post">
 		{% if post.published_date %}
-		<div clas="date">
-			{{ post.published_date }}
-		</div>
+			<div clas="date">
+				{{ post.published_date }}
+			</div>
+		{% else %}
+			<a class="btn btn-default" href="{% url 'blog.views.post_publish' pk=post.pk %}">Publish</a>
 		{% endif %}
 		{% if user.is_authenticated %}
-			<a class="btn btn-default" href="{% url 'post_edit' pk=post.pk %}"><span class="glyphicon glyphicon-pencil"></span></a>
+			<a class="btn btn-default" href="{% url 'post_edit' pk=post.pk %}"><span class="glyphicon glyphicon-pencil"></span> Edit</a>
+
+			<a class="btn btn-danger" href="{% url 'post_remove' pk=post.pk %}"><span class="glyphicon glyphicon-remove"></span> Delete</a>
 		{% endif %}
 		<h1>{{ post.title }}</h1>
 		<p>{{ post.text|linebreaks }}</p>
