--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -23,7 +23,7 @@
 }
 
 h1, h2, h3, h4 {
-    font-family: 'Lobster', cursive;
+    font-family: 'Permanent Marker', cursive;
 }
 
 .date {
@@ -45,6 +45,9 @@ h1, h2, h3, h4 {
     margin-right: 20px;
 }
 
+p#greeting{
+	color:#FFFFFF;
+}
 .post {
     margin-bottom: 70px;
 }
