--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -4,7 +4,7 @@
 		<title>The Bat Blog</title>
 		<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
 		<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
-		<link href="http://fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext" rel="stylesheet" type="text/css">
+		<link href='https://fonts.googleapis.com/css?family=Permanent+Marker' rel='stylesheet' type='text/css'>
 
 		<link rel="stylesheet" href="{% static 'css/blog.css' %}"
 	</head>
@@ -13,15 +13,21 @@
 			<h1><a href="#">Django Girls Tutorial</a></h1>
 		</div>
 
-		{% if user.is_authenticated %}
+
 		<div class="toolbar container">
 			<div class="row">
+				{% if user.is_authenticated %}
 				<a class="btn btn-default" href="{% url 'post_draft_list' %}" ><span class="glyphicon glyphicon-edit"></span> View Drafts</a>
 
 				<a id="add-new" class="btn btn-info" href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span> Add New Post</a>
+				<p id="greeting">Hello {{ user.username}} <small>(<a href="{% url 'django.contrib.auth.views.logout' %}"> logout </a>)</small></p>
+				{% else %}
+				<a href="{% url 'django.contrib.auth.views.login' %}"><span class="glyphicon glyphicon-lock"></span></a>
+				{% endif %}
+
 			</div>
 		</div>
-		{% endif %}
+
 
 		<div class="content container">
 		    <div class="row">
